# edp-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/edp_client/: CHANGELOG.md  Cargo.toml
crates/edp_examples/: Cargo.toml  README.md
crates/edp_examples/src/: common.rs  epmd_dump.rs  epmd_names.rs  epmd_node_info.rs  example_rust_to_erlang_basic_rpc.rs  examplectl.rs  examples_diagnostics.rs  lib.rs  link_processes.rs  monitor_process.rs  send_direct_message.rs  send_message_to_registered_process.rs  simple_node.rs
crates/edp_examples/tests/: test_helpers.rs  test_rpc_integration.rs
crates/edp_examples/tests/erl/: test_node.erl
crates/edp_node/: CHANGELOG.md  Cargo.toml
crates/edp_node/src/: erlang_mod_fns.rs  errors.rs  lib.rs  node.rs
crates/erltf/: CHANGELOG.md
crates/erltf/benches/: decoding.rs  encoding.rs
crates/erltf/src/: lib.rs  term.rs  types.rs
crates/erltf/tests/: atom_cache_lru_tests.rs  borrowed_ordering_tests.rs  property_tests.rs  term_helpers_tests.rs  type_specific_tests.rs
crates/erltf_serde/: CHANGELOG.md  Cargo.toml
crates/erltf_serde/src/: lib.rs
