[package]
name = "edp_client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Low-level Erlang Distribution Protocol client"
keywords = ["erlang", "distribution", "protocol", "client"]
categories = ["network-programming", "asynchronous"]

[dependencies]
erltf = { workspace = true }
erltf_serde = { workspace = true }

tokio = { workspace = true, default-features = false, features = ["net", "io-util", "time", "sync", "macros"] }
thiserror = { workspace = true }
nom = { workspace = true }
bytes = { workspace = true }
md-5 = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["rt", "rt-multi-thread", "test-util"] }
proptest = { workspace = true }
